--- a/app/src/main/res/drawable/boderblue.xml
+++ b/app/src/main/res/drawable/boderblue.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:startColor="#1ab2ff"
-        android:endColor="#e6f7ff"
-        android:angle="90" />
+    <stroke
+        android:width="1dip"
+        android:color="@android:color/holo_blue_bright" />
 </shape>
