--- a/app/src/main/res/layout/activity_main_1b.xml
+++ b/app/src/main/res/layout/activity_main_1b.xml
@@ -5,36 +5,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".MainActivity2">
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="169dp"
-        android:layout_height="171dp"
-        app:srcCompat="@android:drawable/ic_secure"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="97dp" />
+    tools:context=".MainActivity_1b">
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="177dp"
-        android:layout_height="55dp"
+        android:layout_width="183dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="40dp"
         android:gravity="center"
         android:text="FORGET PASSWORD"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="28sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="323dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="370dp"
         android:layout_height="60dp"
+        android:layout_marginTop="44dp"
+        android:gravity="center"
         android:text="Provide your account email for which you want to reset your password"
         android:textColor="#000000"
-        android:gravity="center"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
+        android:src="@drawable/lock"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextEmailAddress"
+        android:layout_width="376dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/background2"
+        android:drawableLeft="@drawable/mail"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:text="Email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="378dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="40dp"
+        android:text="NEXT"
+        android:textColor="#000000"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="426dp" />
+        android:textStyle="bold"
+        app:backgroundTint="#E3C000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
